2015-04-12	Erik E. Lorenz	<erik.e.lorenz@gmail.com>

	* src/interactive/battery.sh: only showing useful values

2015-03-15	Erik E. Lorenz	<erik.e.lorenz@gmail.com>

	* src/interactive/i3-batterycheck.sh: battery-nagbar service added
	hours, minutes, seconds... upower sucks
	fixed some pipes
	hiding the nagbar after laptop has been plugged in

2015-03-10	Erik E. Lorenz	<erik.e.lorenz@gmail.com>

	* src/git/pushall.sh: pulling before pushing
	informing about remoteless repositories

2015-03-04	Erik E. Lorenz	<erik.e.lorenz@gmail.com>

	* src/git/changelogupdate.sh: correctly handling similarly named files in different directories

2015-02-05	Erik E. Lorenz	<erik.e.lorenz@gmail.com>

	* autogen.sh: not removing COPYING anymore, so 'make dist' does not fail

	* configure.ac: auto-generated with src/build/create-configureac.sh
	--enable-FEATURE/--disable-FEATURE for every src subdirectory added
	enable/disable options: formatting as proper help strings

	* .gitignore: COPYING added

	* Makefile.am: auto-generated with src/build/create-makefileam.sh
	selecting features according to --enable-FEATURE/--disable-FEATURE

	* src/: source files reorganized into selectable features (./configure --enable-FEATURE)

	* src/build/create-configureac.sh: auto-generating configure.ac from the source directory
	enable/disable options: formatting as proper help strings

	* src/build/create-makefileam.sh: auto-generating Makefile.am from the source directory

	* src/git/pullall.sh: centering the directory names using printf/bash magic

2015-02-03	Erik E. Lorenz	<erik.e.lorenz@gmail.com>

	* src/kerbalpodcast-dl.sh: script for auto-downloading the latest kerbal podcast
	specifying the output file

2015-01-21	Erik E. Lorenz	<erik.e.lorenz@gmail.com>

	* src/changelogupdate.sh: only writing staged files to the changelog
	now with the correct amount of empty lines

	* src/mountasuser.sh: convenience functions and additional error checking
