@@ -1,3 +1,7 @@
+2015-05-07	Erik E. Lorenz	<erik.e.lorenz@gmail.com>
+
+	* src/interactive/ensnbautoadmin.sh: auto-enter admin password
+
 2015-04-12	Erik E. Lorenz	<erik.e.lorenz@gmail.com>
 
 	* src/interactive/battery.sh: only showing useful values
